Fix URL::new deprecation